--- a/services.html
+++ b/services.html
@@ -32,8 +32,57 @@
     <main class="main-services">
         <div class="all-services">
             <div class="div-img-services"><img src="/svg/Icones/Editorial.svg" alt="" class="img-services"></div>
-            <p class="txt-services" id="editorial"><span class="span-services">Editorial</span> <br>
-                Faço projeto gráfico que inclui: ícones, cores, tipografias e ilustrações, ou seja, a identidade visual do projeto editorial & diagramação.</p>
+            <div class="row-itens-services">
+                <span class="span-services">Projetos Editoriais</span> 
+                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                Faço projetos gráficos que incluem: ícones, cores, tipografias e ilustrações, ou seja, a identidade visual do projeto editorial & diagramação.</p>
+            </div>
+        </div>
+
+        <div class="right-services">
+            <div class="row-itens-services">
+                <span class="span-services">Identidade Visual</span> 
+                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                    Trabalho com criação de marcas, juntamente de seus impressos prontinhos para a gráfica, arquivos de imagem em PNG, 
+                    JPG e arquivo Illustrator, e um manual instrutivo com recomendações técnicas e apresentação da marca.</p>
+            </div>
+            <div class="div-img-services"><img src="/svg/Icones/Identidade Visual.svg" alt="" class="img-services"></div>
+        </div>
+
+        <div class="all-services">
+            <div class="div-img-services"><img src="/svg/Icones/Ilustração.svg" alt="" class="img-services"></div>
+            <div class="row-itens-services">
+                <span class="span-services">Ilustrações</span> 
+                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                    Elaboro ilustrações geralmente de retratos, animais e arte abstrata com estilos fantástico ou semirealista/cartunizado. Também faço ilustrações vetoriais para usos diversos.</p>
+            </div>
+        </div>
+
+        <div class="right-services">
+            <div class="row-itens-services">
+                <span class="span-services">Estampas</span> 
+                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                    Crio estampas para utilização nos mais variados suportes, como roupas, canecas, ecobags e o que te der na telha!</p>
+            </div>
+            <div class="div-img-services"><img src="/svg/Icones/Estampas.svg" alt="" class="img-services"></div>
+        </div>
+
+        <div class="all-services">
+            <div class="div-img-services"><img src="/svg/Icones/artes photoshop.svg" alt="" class="img-services"></div>
+            <div class="row-itens-services">
+                <span class="span-services">Artes Photoshop</span> 
+                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                    Essas artes podem ser montagens, banners, capas ou posts para redes sociais!.</p>
+            </div>
+        </div>
+
+        <div class="right-services">
+            <div class="row-itens-services">
+                <span class="span-services">Design de Interface</span> 
+                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                    Construo interfaces de aplicativos e sites, sendo para os sites em sua maioria no wix, mas caso tenha um programador html ou css, elaboro modelo em PDF.</p>
+            </div>
+            <div class="div-img-services"><img src="/svg/Icones/design interfaces.svg" alt="" class="img-services"></div>
         </div>
     </main>
     
