--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-about">
         <div class="all-about">
             <div class="div-about">
                 <div class="div-img"><img src="/img/4devs_gerador_imagem.png" alt="" class="imgAbout"></div>
