--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">  
     <script defer src="mobile-navbar.js"></script>
 </head>
-<body>
+<body class="body-about">
     <header>
         <nav>
             <a href="/" class="logo">THAÍS SANTOS</a>
@@ -44,7 +44,7 @@ Meu movimento artístico favorito é o dadaísmo! E pode ser o seu também se go
 
     </main>
     
-    <footer>
+    <footer class="footer-about">
         <p>Portfólio - Thaís Santos Costa | 2022</p>
     </footer>
     
