--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1>Designer.<br>Ilustradora.</h1>
         </div>
         <div class="row">
-            <a href="/pagprojeto.html"  class="port img1"><img src="/img/Enviar_para_Davi_porfolio/SuRaposa/mockupcartaomelhor.png"  alt=""></a>
+            <a href="/pagprojeto.html"  class="port img1"><img src="https://github.com/Davisamasoa/portfolio-thais/tree/main/img/Enviar_para_Davi_porfolio/SuRaposa/mockupcartaomelhor.png"  alt=""></a>
             <a href="/pagprojeto.html"  class="port img2"><img src="/img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" alt=""></a>
         </div>
 
