--- a/services.html
+++ b/services.html
@@ -41,8 +41,8 @@
 
         <div class="right-services">
             <div class="row-itens-services">
-                <span class="span-services">Identidade Visual</span> 
-                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                <span class="span-services2">Identidade Visual</span> 
+                <p class="txt-services2" id="editorial"><span class="span-services"></span> <br>
                     Trabalho com criação de marcas, juntamente de seus impressos prontinhos para a gráfica, arquivos de imagem em PNG, 
                     JPG e arquivo Illustrator, e um manual instrutivo com recomendações técnicas e apresentação da marca.</p>
             </div>
@@ -60,8 +60,8 @@
 
         <div class="right-services">
             <div class="row-itens-services">
-                <span class="span-services">Estampas</span> 
-                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                <span class="span-services2">Estampas</span> 
+                <p class="txt-services2" id="editorial"><span class="span-services"></span> <br>
                     Crio estampas para utilização nos mais variados suportes, como roupas, canecas, ecobags e o que te der na telha!</p>
             </div>
             <div class="div-img-services"><img src="/svg/Icones/Estampas.svg" alt="" class="img-services"></div>
@@ -78,8 +78,8 @@
 
         <div class="right-services">
             <div class="row-itens-services">
-                <span class="span-services">Design de Interface</span> 
-                <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
+                <span class="span-services2">Design de Interface</span> 
+                <p class="txt-services2" id="editorial"><span class="span-services"></span> <br>
                     Construo interfaces de aplicativos e sites, sendo para os sites em sua maioria no wix, mas caso tenha um programador html ou css, elaboro modelo em PDF.</p>
             </div>
             <div class="div-img-services"><img src="/svg/Icones/design interfaces.svg" alt="" class="img-services"></div>
@@ -87,7 +87,7 @@
     </main>
     
     <footer>
-        <p>Portfólio - Thaís Santos Costa | 2022</p>
+        <div><p>Portfólio - Thaís Santos Costa | 2022</p></div>
     </footer>
     
 
