--- a/about.html
+++ b/about.html
@@ -17,14 +17,13 @@
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
-                
             </div>
             <ul class="nav-list" >
-                <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="/img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
+                <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="./img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about.html">Sobre</a></li>
-                <li><a href="/services.html">Serviços</a></li>
-                <li id="last"><a href="/contato.html">Contato</a></li>
+                <li><a href="./about.html">Sobre</a></li>
+                <li><a href="./services.html">Serviços</a></li>
+                <li id="last"><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
