--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thaís Santos | Início</title>
     <link rel="stylesheet" href="style.css">  
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">  
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
     <script defer src="mobile-navbar.js"></script>
 </head>
 <body>
@@ -17,14 +17,13 @@
                 <div class="line1"></div>
                 <div class="line2"></div>
                 <div class="line3"></div>
-                
             </div>
             <ul class="nav-list" >
-                <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="/img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
+                <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="./img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about.html">Sobre</a></li>
-                <li><a href="/services.html">Serviços</a></li>
-                <li id="last"><a href="/contato.html">Contato</a></li>
+                <li><a href="./about.html">Sobre</a></li>
+                <li><a href="./services.html">Serviços</a></li>
+                <li id="last"><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
