--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
 
     <main class="main-services">
         <div class="all-services">
-            <div class="div-img-services"><img src="/svg/Icones/Editorial.svg" alt="" class="img-services"></div>
+            <div class="div-img-services"><img src="./svg/Icones/Editorial.svg" alt="" class="img-services"></div>
             <div class="row-itens-services">
                 <span class="span-services">Projetos Editoriais</span> 
                 <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
@@ -45,11 +45,11 @@
                     Trabalho com criação de marcas, juntamente de seus impressos prontinhos para a gráfica, arquivos de imagem em PNG, 
                     JPG e arquivo Illustrator, e um manual instrutivo com recomendações técnicas e apresentação da marca.</p>
             </div>
-            <div class="div-img-services"><img src="/svg/Icones/Identidade Visual.svg" alt="" class="img-services"></div>
+            <div class="div-img-services"><img src="./svg/Icones/Identidade Visual.svg" alt="" class="img-services"></div>
         </div>
 
         <div class="all-services">
-            <div class="div-img-services"><img src="/svg/Icones/Ilustração.svg" alt="" class="img-services"></div>
+            <div class="div-img-services"><img src="./svg/Icones/Ilustração.svg" alt="" class="img-services"></div>
             <div class="row-itens-services">
                 <span class="span-services">Ilustrações</span> 
                 <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
@@ -63,11 +63,11 @@
                 <p class="txt-services2" id="editorial"><span class="span-services"></span> <br>
                     Crio estampas para utilização nos mais variados suportes, como roupas, canecas, ecobags e o que te der na telha!</p>
             </div>
-            <div class="div-img-services"><img src="/svg/Icones/Estampas.svg" alt="" class="img-services"></div>
+            <div class="div-img-services"><img src="./svg/Icones/Estampas.svg" alt="" class="img-services"></div>
         </div>
 
         <div class="all-services">
-            <div class="div-img-services"><img src="/svg/Icones/artes photoshop.svg" alt="" class="img-services"></div>
+            <div class="div-img-services"><img src="./svg/Icones/artes photoshop.svg" alt="" class="img-services"></div>
             <div class="row-itens-services">
                 <span class="span-services">Artes Photoshop</span> 
                 <p class="txt-services" id="editorial"><span class="span-services"></span> <br>
@@ -81,7 +81,7 @@
                 <p class="txt-services2" id="editorial"><span class="span-services"></span> <br>
                     Construo interfaces de aplicativos e sites, sendo para os sites em sua maioria no wix, mas caso tenha um programador html ou css, elaboro modelo em PDF.</p>
             </div>
-            <div class="div-img-services"><img src="/svg/Icones/design interfaces.svg" alt="" class="img-services"></div>
+            <div class="div-img-services"><img src="./svg/Icones/design interfaces.svg" alt="" class="img-services"></div>
         </div>
     </main>
     
