--- a/pagprojeto.html
+++ b/pagprojeto.html
@@ -20,7 +20,7 @@
             </div>
             <ul class="nav-list" >
                 <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="./img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
-                <li><a href="/">Home</a></li>
+                <li><a href="./">Home</a></li>
                 <li><a href="./about.html">Sobre</a></li>
                 <li><a href="./services.html">Serviços</a></li>
                 <li id="last"><a href="./contato.html">Contato</a></li>
