--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <main class="main-about">
         <div class="all-about">
             <div class="div-about">
-                <div class="div-img"><img src="/img/4devs_gerador_imagem.png" alt="" class="imgAbout"></div>
+                <div class="div-img"><img src="/img/elfinea_auto_x2(1).jpg" alt="" class="imgAbout"></div>
                 <p class="txtAbout"><span class="sobremim">SOBRE MIM</span> <br>
                     Oioi, pessoinha! Tudo bem do lado daí? Espero que sim!!
 Me chamo Thaís, prazer! Sou designer e ilustradora, e claro, afeiçoada por arte, inclusive a matemática!
