obrigado.html add

--- a/contato.html
+++ b/contato.html
@@ -46,7 +46,7 @@
                 <p class="p-form">Mensagem</p>
                 <input class="input-msg" type="text" required>
                 <input type="hidden" name="_captcha" value="false">
-               <!-- <input type="hidden" name="_next" value="https://yourdomain.co/thanks.html">--> 
+               <input type="hidden" name="_next" value="https://davisamasoa.github.io/portfolio-thais/obrigado.html">
                 <button class="enviar-form" type="submit">ENVIAR</button>
             </form>
         <aside>
