--- a/contato.html
+++ b/contato.html
@@ -37,14 +37,14 @@
                 <div class="div-form-name">
                     <p class="p-name p-nome">Nome</p>
                     <p class="p-name p-sobrenome">Sobrenome</p>    
-                    <input type="text" class="name" required>
+                    <input type="text" class="name" name="Primeiro nome" required>
                     <p class="none">Sobrenome</p>
-                    <input type="text" class="name sobrenome" required>
+                    <input type="text" class="name sobrenome" name="Sobrenome" required>
                 </div>
                 <p class="p-form">Seu e-mail</p>
-                <input type="email" required>
+                <input type="email" name="e-mail" required>
                 <p class="p-form">Mensagem</p>
-                <input class="input-msg" type="text" required>
+                <input class="input-msg" type="text" name="Mensagem" required>
                 <input type="hidden" name="_captcha" value="false">
                <input type="hidden" name="_next" value="https://davisamasoa.github.io/portfolio-thais/obrigado.html">
                 <button class="enviar-form" type="submit">ENVIAR</button>
