--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <ul class="nav-list" >
                 <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="./img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
                 <li><a href="./">Home</a></li>
-                <li><a href="./pages/about.html">Sobre</a></li>
-                <li><a href="./pages/services.html">Serviços</a></li>
-                <li id="last"><a href="./pages/contato.html">Contato</a></li>
+                <li><a href="/pages/about.html">Sobre</a></li>
+                <li><a href="/pages/services.html">Serviços</a></li>
+                <li id="last"><a href="/pages/contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
