--- a/pages/projects/bennycake.html
+++ b/pages/projects/bennycake.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Projeto Benny Cake</title>
-        <link rel="stylesheet" href=".style.css">  
+        <link rel="stylesheet" href="./style.css">  
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src=".mobile-navbar.js"></script>
+        <script defer src="./mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -38,9 +38,9 @@
                 </p>
          </div>
         <div class="row-projeto row-1">
-            <a href="/img/Enviar_para_Davi_porfolio/BennyCake/logobennycake-02.png" target="_blank"  class="port img-projeto"><img src="/img/benny.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/BennyCake/CartaoBennyMockup.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/BennyCake/CartaoBennyMockup.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/BennyCake/logobennycake-02.png" target="_blank"  class="port img-projeto"><img src="./img/benny.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/BennyCake/CartaoBennyMockup.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/BennyCake/CartaoBennyMockup.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/BennyCake/AdesivosBennyMockup.png" alt=""></a>
         </div>
         
     </main>
