--- a/pages/projects/estampa.html
+++ b/pages/projects/estampa.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Projeto Estampa</title>
-        <link rel="stylesheet" href=".style.css">  
+        <link rel="stylesheet" href="./style.css">  
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src=".mobile-navbar.js"></script>
+        <script defer src="./mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -36,8 +36,8 @@
                  </p>
          </div>
         <div class="row-projeto row-1">
-            <a href="/img/Enviar_para_Davi_porfolio/Estampa/estampatatoo.jpeg" target="_blank"  class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Estampa/estampatatoo.jpeg" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/Estampa/luvatatoo.jpeg" target="_blank"  class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Estampa/luvatatoo.jpeg" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Estampa/estampatatoo.jpeg" target="_blank"  class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Estampa/estampatatoo.jpeg" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Estampa/luvatatoo.jpeg" target="_blank"  class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Estampa/luvatatoo.jpeg" alt=""></a>
 
         </div>
         
