--- a/pages/projects/aplicativo.html
+++ b/pages/projects/aplicativo.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Projeto aplicativo</title>
-        <link rel="stylesheet" href=".style.css">  
+        <link rel="stylesheet" href="./style.css">  
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src=".mobile-navbar.js"></script>
+        <script defer src="./mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -36,8 +36,8 @@
             
          </div>
          <div class="row-projeto row-1">
-            <a href="/img/Enviar_para_Davi_porfolio/Aplicativo/mockup.png" target="_blank"  class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Aplicativo/mockup.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/Aplicativo/iPhone 12 Mockup.png" target="_blank"  class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Aplicativo/iPhone 12 Mockup.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Aplicativo/mockup.png" target="_blank"  class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Aplicativo/mockup.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Aplicativo/iPhone 12 Mockup.png" target="_blank"  class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Aplicativo/iPhone 12 Mockup.png" alt=""></a>
         </div>
     </main>
     
