--- a/pages/projects/coloquio.html
+++ b/pages/projects/coloquio.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Projeto Colóquio Desconsertado</title>
-        <link rel="stylesheet" href=".style.css">  
+        <link rel="stylesheet" href="./style.css">  
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src=".mobile-navbar.js"></script>
+        <script defer src="./mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -37,7 +37,7 @@
             <p class="p-clique-aqui">Caso queira conferir:<a href="https://www.instagram.com/arte.intuitiva_/" target="_blank" class="a-projeto">@arte.intuitiva_</a></p>
          </div>
         <div class="row-projeto row-1">
-            <a href="/img/Enviar_para_Davi_porfolio/Artes digitais/10.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Artes digitais/10.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Artes digitais/10.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Artes digitais/10.png" alt=""></a>
         </div>
         
     </main>
