--- a/pages/projects/guiaparlamento.html
+++ b/pages/projects/guiaparlamento.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Projeto Guia Parlamento</title>
-        <link rel="stylesheet" href=".style.css">  
+        <link rel="stylesheet" href="./style.css">  
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src=".mobile-navbar.js"></script>
+        <script defer src="./mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -38,11 +38,11 @@
             <p class="p-clique-aqui">Para visualização do projeto completo em forma de revista virtual, <a href="https://www.flipsnack.com/878AEE77C6F/guia-parlamento-mundial-da-juventude.html" target="_blank" class="a-projeto">clique aqui.</a></p>
          </div>
         <div class="row-projeto row-1 guia">
-            <a href="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-01.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-01.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-02.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-02.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-03.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-03.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-04.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-04.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-05.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-05.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-01.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-01.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-02.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-02.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-03.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-03.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-04.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-04.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-05.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/GuiaParlamento/GuiaParlamentoMundialJuventude-05.png" alt=""></a>
         </div>
     </main>
     
