--- a/pages/projects/ilustracoesDigitais.html
+++ b/pages/projects/ilustracoesDigitais.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Ilustrações Digitais</title>
-        <link rel="stylesheet" href=".style.css">  
+        <link rel="stylesheet" href="/style.css">  
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src=".mobile-navbar.js"></script>
+        <script defer src="/mobile-navbar.js"></script>
     </head>
     <body>
         <header>
@@ -35,14 +35,14 @@
             
          </div>
         <div class="row-projeto row-1">
-            <a href="/img/Enviar_para_Davi_porfolio/Artes digitais/1.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Artes digitais/1.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/Artes digitais/2.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Artes digitais/2.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/Artes digitais/3.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Artes digitais/3.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Artes digitais/1.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Artes digitais/1.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Artes digitais/2.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Artes digitais/2.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Artes digitais/3.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Artes digitais/3.png" alt=""></a>
         </div>
         <div class="row-projeto row-1 row2">
-            <a href="/img/Enviar_para_Davi_porfolio/Artes digitais/4.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Artes digitais/4.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/Artes digitais/5.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Artes digitais/5.png" alt=""></a>
-            <a href="/img/Enviar_para_Davi_porfolio/Artes digitais/7.png" target="_blank" class="port img-projeto"><img src="/img/Enviar_para_Davi_porfolio/Artes digitais/7.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Artes digitais/4.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Artes digitais/4.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Artes digitais/5.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Artes digitais/5.png" alt=""></a>
+            <a href="./img/Enviar_para_Davi_porfolio/Artes digitais/7.png" target="_blank" class="port img-projeto"><img src="./img/Enviar_para_Davi_porfolio/Artes digitais/7.png" alt=""></a>
         </div>
     </main>
     
