--- a/pages/projects/projeto-suraposa.html
+++ b/pages/projects/projeto-suraposa.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Projeto SuRaposa</title>
-        <link rel="stylesheet" href=".style.css">  
+        <link rel="stylesheet" href="./style.css">  
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
-        <script defer src=".mobile-navbar.js"></script>
+        <script defer src="./mobile-navbar.js"></script>
     </head>
     <body>
         <header>
