--- a/pages/about.html
+++ b/pages/about.html
@@ -5,25 +5,25 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thaís Santos | Sobre</title>
-        <link rel="stylesheet" href="/style.css">  
-        <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">  
-        <script defer src="/mobile-navbar.js"></script>
+        <link rel="stylesheet" href="../style.css">  
+        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">  
+        <script defer src="../mobile-navbar.js"></script>
     </head>
     <body>
         <header>
             <nav>
-                <a href="/" class="logo">THAÍS SANTOS</a>
+                <a href="../" class="logo">THAÍS SANTOS</a>
                 <div class="mobile-menu">
                     <div class="line1"></div>
                     <div class="line2"></div>
                     <div class="line3"></div>
                 </div>
                 <ul class="nav-list" >
-                    <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="/img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/pages/about.html">Sobre</a></li>
-                    <li><a href="/pages/services.html">Serviços</a></li>
-                    <li id="last"><a href="/pages/contato.html">Contato</a></li>
+                    <li><a href="https://www.instagram.com/dada_ismos/" target="_blank"><img src="../img/instaiconwhite.png" alt="ícone instagram" id="iconinsta" ></a></li>
+                    <li><a href="../">Home</a></li>
+                    <li><a href="about.html">Sobre</a></li>
+                    <li><a href="services.html">Serviços</a></li>
+                    <li id="last"><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -31,7 +31,7 @@
     <main class="main-about">
         <div class="all-about">
             <div class="div-about">
-                <div class="div-img"><img src="/img/elfinea_auto_x2(1).jpg" alt="" class="imgAbout"></div>
+                <div class="div-img"><img src="../img/elfinea_auto_x2(1).jpg" alt="" class="imgAbout"></div>
                 <p class="txtAbout"><span class="sobremim">SOBRE MIM</span> <br>
                     Oioi, pessoinha! Tudo bem do lado daí? Espero que sim!!
 Me chamo Thaís, prazer! Sou designer e ilustradora, e claro, afeiçoada por arte, inclusive a matemática!
