--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thaís Santos | oi</title>
+    <title>Thaís Santos | Início</title>
     <link rel="stylesheet" href="./style.css">  
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
     <script defer src="./mobile-navbar.js"></script>
